<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">

        <TextureView
            android:id="@+id/texture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorTransparentPanel"
        android:orientation="vertical"
        android:padding="@dimen/panel_padding">

        <TextView
            android:id="@+id/recognition_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPanel" />

        <TextView
            android:id="@+id/camera_preview_frame_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPanel" />

        <TextView
            android:id="@+id/mouth_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPanel" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorTransparentPanel"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/nav_bar_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/dlib_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlib_face_recognition" />

            <RadioButton
                android:id="@+id/gms_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gms_vision_face_recognition" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_20" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/image_brightness_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/panel_padding"
                android:paddingEnd="@dimen/footer_panel_padding"
                android:paddingStart="@dimen/footer_panel_padding"
                android:paddingTop="@dimen/panel_padding"
                android:text="@string/brightness_caption"
                android:textColor="@color/white" />

            <SeekBar
                android:id="@+id/brightness_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/image_contrast_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/panel_padding"
                android:paddingEnd="@dimen/footer_panel_padding"
                android:paddingStart="@dimen/footer_panel_padding"
                android:paddingTop="@dimen/panel_padding"
                android:text="@string/contrast_caption"
                android:textColor="@color/white" />

            <SeekBar
                android:id="@+id/contrast_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/image_size_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="@dimen/panel_padding"
                android:paddingEnd="@dimen/footer_panel_padding"
                android:paddingStart="@dimen/footer_panel_padding"
                android:paddingTop="@dimen/panel_padding"
                android:text="@string/image_size"
                android:textColor="@color/white" />

            <SeekBar
                android:id="@+id/preview_size_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/image_size_caption"
                android:layout_toStartOf="@+id/visibility_switcher" />

            <ImageView
                android:id="@+id/visibility_switcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/footer_panel_padding"
                android:src="@drawable/preview_ic_visibility" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
